<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorPrimary"
        tools:context=".activities.CreateNoteActivity">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_40sdp"
                android:clipToPadding="false"
                android:paddingBottom="@dimen/_10sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true">

                        <ImageView
                                android:id="@+id/imageBack"
                                android:layout_width="@dimen/_20sdp"
                                android:layout_height="@dimen/_20sdp"
                                android:layout_marginStart="@dimen/_20sdp"
                                android:layout_marginTop="@dimen/_20sdp"
                                android:layout_marginEnd="@dimen/_12sdp"
                                android:contentDescription="@string/back_button_description"
                                android:src="@drawable/ic_back"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:tint="@color/colorIcons"/>

                        <ImageView
                                android:id="@+id/imageSave"
                                android:layout_width="@dimen/_20sdp"
                                android:layout_height="@dimen/_20sdp"
                                android:layout_marginEnd="@dimen/_20sdp"
                                android:background="@drawable/background_done_button"
                                android:contentDescription="@string/save_button_description"
                                android:padding="@dimen/_4sdp"
                                android:src="@drawable/ic_done"
                                android:tint="@color/colorIcons"
                                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="@id/imageBack"/>

                        <EditText
                                android:id="@+id/inputNoteTitle"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_35sdp"
                                android:layout_marginStart="@dimen/_12sdp"
                                android:layout_marginTop="@dimen/_15sdp"
                                android:layout_marginEnd="@dimen/_12sdp"
                                android:background="@null"
                                android:fontFamily="@font/ubuntu_bold"
                                android:hint="@string/note_title"
                                android:imeOptions="actionDone"
                                android:importantForAutofill="no"
                                android:includeFontPadding="false"
                                android:inputType="text"
                                android:textColor="@color/white"
                                android:textColorHint="@color/colorTextHint"
                                android:textSize="@dimen/_16sdp"
                                app:layout_constraintTop_toBottomOf="@id/imageBack"/>

                        <TextView
                                android:id="@+id/TextDateTime"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ubuntu_regular"
                                android:includeFontPadding="false"
                                android:textColor="@color/colorIcons"
                                android:textSize="@dimen/_10ssp"
                                app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"
                                app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
                                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle" />

                        <EditText
                                android:id="@+id/inputNote"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_12sdp"
                                android:layout_marginTop="@dimen/_15sdp"
                                android:layout_marginEnd="@dimen/_12sdp"
                                android:layout_marginBottom="@dimen/_15sdp"
                                android:background="@null"
                                android:fontFamily="@font/ubuntu_regular"
                                android:gravity="top"
                                android:hint="@string/type_note_here"
                                android:importantForAutofill="no"
                                android:includeFontPadding="false"
                                android:inputType="textMultiLine"
                                android:minHeight="@dimen/_100sdp"
                                android:textColor="@color/white"
                                android:textColorHint="@color/colorTextHint"
                                android:textSize="@dimen/_13ssp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/TextDateTime" />
                </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>