<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        tools:context=".activities.MainActivity">

        <RelativeLayout
                android:id="@+id/topTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                        android:id="@+id/imageViewFolders"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_folders"
                        app:tint="@color/colorSearchIcons"/>

                <TextView
                        android:id="@+id/currentFolder"
                        android:layout_width="wrap_content"
                        android:layout_height="35.00dp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/ubuntu_bold"
                        android:includeFontPadding="false"
                        android:text="@string/notes"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18ssp"
                        android:layout_centerInParent="true"/>

                <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:background="@drawable/background_search"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_ellipsis"
                        app:tint="@color/colorSearchIcons"/>
        </RelativeLayout>

        <!--
                 android:gravity:
                        https://stackoverflow.com/questions/3482742/what-is-the-difference-between-gravity-and-layout-gravity-in-android
                        https://thinkandroid.wordpress.com/2010/01/14/how-to-position-views-properly-in-layouts/
                        https://www.tutorialride.com/android/android-gravity.htm
        -->


        <LinearLayout
                android:id="@+id/layoutSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/background_search"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/topTitle">

                <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:contentDescription="@string/search_icon_description"
                        android:src="@drawable/ic_search"
                        app:tint="@color/colorSearchIcons"/>

                <!--
                        android:background="@null": toggle underline off when inputting text
                        android:importantForAutofill="no": no history input shown
                -->

                <EditText
                        android:id="@+id/inputSearch"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/searchHint"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/colorTextHint"
                        android:textSize="@dimen/_13ssp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/noteListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_2sdp"
                android:clipToPadding="false"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
                app:layout_constraintTop_toBottomOf="@id/layoutSearch" />

        <LinearLayout
                android:id="@+id/layoutQuickActions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorQuickActionsBackground"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent">
        </LinearLayout>

        <ImageView
                android:id="@+id/imageAddNoteMain"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/background_add_button"
                android:contentDescription="@string/add_note_button_description"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/layoutQuickActions"
                android:onClick="createNote"
                app:tint="?colorPrimary"/>


</androidx.constraintlayout.widget.ConstraintLayout>